--- a/static/styles/site.css
+++ b/static/styles/site.css
@@ -30,7 +30,7 @@ html, body {
     background-color: #f5f5f5;
 }
 
-.panel {
+.panel-shadow {
   border-color: #cfd9D7;
   border-radius: 2px;
   box-shadow: 0 8px 17px rgba(0, 0, 0, .2);
