--- a/static/styles/site.css
+++ b/static/styles/site.css
@@ -328,9 +328,12 @@ html, body {
     border-color: #8d99a6;
     z-index: 2;
 }
+
 .grid-body .editable-row .has-error .form-control {
     z-index: 1;
+    border: 1px solid #ff5858;
 }
+
 .grid-body .editable-row .has-error .form-control:focus {
     border-color: #ff5858;
 }
