--- a/static/styles/site.css
+++ b/static/styles/site.css
@@ -245,7 +245,7 @@ html, body {
 }
 
 .grid-row:last-child {
-    border: none;
+    border-bottom: none;
 }
 
 .grid-row {
@@ -254,12 +254,20 @@ html, body {
     -webkit-transition: 0.2s;
     -o-transition: 0.2s;
     transition: 0.2s;
+    border-left: thick solid transparent;
 }
 
-.grid-row:hover, .grid-row:focused {
+.grid-row:hover {
     background-color: #f5f5f5;
-    border-left: 5px solid #3572b0;
+    border-left: thick solid #c7dff7;
 }
+
+/****Don't work
+.grid-row:focus, .grid-row:active{
+    background-color: #f5f5f5;
+    border-left: thick solid #3572b0;
+}
+****/
 
 .form-grid .data-row.sortable-handle {
     cursor: move;
